[package]
name = "snow2d"
version = "0.1.0"
authors = ["toyboot4e <toyboot4e@gmail.com>"]
edition = "2018"

# exclude = [""]
# keywords = []
# license = "MIT"
# repository = "https://github.com/toyboot4e/snow_rl"
# description = ""

[features]
use-imgui = ["imgui"]
no-imgui = ["snow2d_derive/dummy"]

[dependencies]
sdl2 = "0.34.5"
rokol = { path = "rokol/rokol", features = ["glcore33", "impl-gfx", "sdl2", "fontstash"] }
xdl = { path = "xdl", features = ["sdl2", "serde"] }

imgui = { version = "0.7.0", optional = true }

soloud = "0.4.0"
image = "0.23.14"
glam = "0.16.0"

snow2d_macros = { path = "snow2d_macros" }
snow2d_derive = { path = "snow2d_derive" }

anyhow = "1.0.41"
ron = "0.6.4"
serde = "1.0.126"
thunderdome = { git = "https://github.com/toyboot4e/thunderdome", branch = "snowrl" }

log = "0.4.14"
env_logger = "0.8.4"

auto_ops = "0.3.0"
arraytools = "0.1.5"
bitflags = "1.2.1"
bytemuck = "1.6.1"
derivative = "2.2.0"
downcast-rs = "1.2.0"
dyn-clone = "1.0.4"
enum_dispatch = "0.3.7"
hackfn = "0.1.4"
indoc = "1.0.3"
inherent = "0.1.6"
inline_tweak = "1.0.8"
once_cell = "1.7.2"
thiserror = "1.0.25"
trait_enum = "0.5.0"
paste = "1.0.5"

